# google-authentication

./: .gitignore  README.md
backend/: pyproject.toml
backend/api/: serializers.py  urls.py  views.py
backend/backend/: settings.py  urls.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/components/: GoogleLoginButton.jsx  LoadingIndicator.jsx  Navbar.jsx
frontend/src/pages/: Home.jsx  Login.jsx  Logout.jsx  NotFound.jsx  Register.jsx
